refactoring demo version