@@ -15,8 +15,8 @@ import org.openqa.selenium.interactions.PointerInput;
 import org.openqa.selenium.interactions.Sequence;
 import org.openqa.selenium.support.ui.WebDriverWait;
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 public class MobileActionsUtils {
     private static TestSetup getTest() {
@@ -104,7 +104,10 @@ public class MobileActionsUtils {
             try {
                 if (!"NATIVE_APP".equals(originalContext)) {
                     driver.context("NATIVE_APP");
-                    wait.until(d -> ((HasContext) d).getContext().equals("NATIVE_APP"));
+                    wait.until(d -> {
+                        ((HasContext) d).getContext();
+                        return false;
+                    });
                 }
 
                 Dimension size = driver.manage().window().getSize();
@@ -124,7 +127,7 @@ public class MobileActionsUtils {
                 int attempts = 0;
                 boolean success = false;
 
-                while (attempts < maxRetries && !success) {
+                while (!success) {
                     try {
                         driver.perform(Collections.singletonList(swipe));
                         success = true;
@@ -212,7 +215,7 @@ public class MobileActionsUtils {
             swipe.addAction(finger.createPointerMove(Duration.ofMillis(100), PointerInput.Origin.viewport(), x, endY));
             swipe.addAction(finger.createPointerUp(PointerInput.MouseButton.LEFT.asArg()));
 
-            driver.perform(Arrays.asList(swipe));
+            driver.perform(List.of(swipe));
         } else {
             IOSDriver driver = (IOSDriver) getTest().mobileWebDriverFactory().getDriverIos();
 
@@ -222,8 +225,8 @@ public class MobileActionsUtils {
 
             int x = width / 2;
 
-            int startY = (int) (height * 0.25);
-            int endY = (int) (height * 0.80);
+            int startY = (int) (height * 0.80); // Start near bottom
+            int endY = (int) (height * 0.25);   // Move to top
 
             PointerInput finger = new PointerInput(PointerInput.Kind.TOUCH, "finger");
             Sequence swipe = new Sequence(finger, 1);
@@ -233,7 +236,7 @@ public class MobileActionsUtils {
             swipe.addAction(finger.createPointerMove(Duration.ofMillis(700), PointerInput.Origin.viewport(), x, endY));
             swipe.addAction(finger.createPointerUp(PointerInput.MouseButton.LEFT.asArg()));
 
-            driver.perform(Arrays.asList(swipe));
+            driver.perform(List.of(swipe));
         }
     }
 
@@ -262,5 +265,22 @@ public class MobileActionsUtils {
         } catch (Exception e) {
             throw new RuntimeException("Swipe failed", e);
         }
+    }
+
+    public static void scrollFast(AppiumDriver driver, int startX, int startY, int endY) {
+        PointerInput finger = new PointerInput(PointerInput.Kind.TOUCH, "finger");
+        Sequence swipe = new Sequence(finger, 1);
+
+        swipe.addAction(finger.createPointerMove(Duration.ZERO,
+                PointerInput.Origin.viewport(), startX, startY));
+
+        swipe.addAction(finger.createPointerDown(PointerInput.MouseButton.LEFT.asArg()));
+
+        swipe.addAction(finger.createPointerMove(Duration.ofMillis(180),
+                PointerInput.Origin.viewport(), startX, endY));
+
+        swipe.addAction(finger.createPointerUp(PointerInput.MouseButton.LEFT.asArg()));
+
+        driver.perform(Collections.singletonList(swipe));
     }
 }
